# bignum-arithmetic-eliptic-curves

./: .gitignore  CMakeLists.txt  README.md  codestyle.md  main.cpp
Bignum_arithmetic/: bignum_arithmetic.cpp  bignum_arithmetic.hpp
Eliptic_curves/: eliptic_curves.cpp  eliptic_curves.hpp
ProjectFiles/: lab.cbp
Src/: BigNum.cpp  BigNum.hpp  EllipticCurves.cpp  EllipticCurves.hpp  KeyGenerator.cpp  KeyGenerator.h  Multiplication.cpp  PredefineEllipticCurves.hpp
Src/bignum_arithmetic/: bignum_arithmetic.hpp
Src/eliptic_curves/: eliptic_curves.hpp
Tests/: CMakeLists.txt  TestBigNum.cpp  TestEllipticCurves.cpp  TestKeyGenerator.cpp
